public/stylesheets/global.css
/* ... */
body {
  line-height: 1;
  background-color: #290001;
  background-image: url(/images/space_background2.jpg);
  background-repeat:repeat-x;
  min-height: 100%;
  min-width: 100%;
  background-attachment: fixed;
  background-position: 0% 100%;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

.serif {
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  padding: .25em 0;
  font-weight: normal;
  color: #501214;

  }

dl {
    display: block;
    

}
h3 {
font-weight: bold;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: .875em;
}
a:visited {
  text-decoration: none;
  color: #836c31;
}
a:link {
  color: #836c31;
  text-decoration: none;
  }
  
a:hover {
  color: #836c31;
  text-decoration:underline;
  }
a:active {color:#836c31;}

body {
  font-family: Palatino, 'Palatino Linotype', Times, 'Times New Roman', 'URW Bookman L', serif;
  margin: 0px;
  color: #000;
  line-height: 1.5em;
  text-align: left;
}

 dd  {
  font-size: .875em;
    padding-left: 1.5em;
    margin: 0;

}

dd p {
  font-size:inherit;
  
}

dt {
  font-weight: bold;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-size: .875em;
  padding-top: .5em;

}

.topbanner {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 82px;
  background: url(/images/banner.jpg) repeat-x;
  z-index: 92;
}

.topbanner-shadow {
  position: absolute;
  left: 0px;
  bottom: 0px;
  height: 16px;
  width: 100%;
  overflow: hidden;
  background: url(/images/banner-shadow.png) repeat-x;
}

.topbanner-content {
  position: relative;
  margin: 0px 60px;
  width: 962px;
  padding-left: 3px;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

.topbanner-content a {
  color: #501214;
  text-decoration: none;
}

.topbanner-homelink {
  display: block;
  width: 166px;
  height: 66px;
}

.topbanner-sitename {
  display: block;
  position: absolute;
  left: 210px;
  top: 25px;
  font-weight: bold;
  font-size: 1.7em;
  padding-bottom: 0.25em;
}

.topbanner-deptlink {
  display: block;
  position: absolute;
  left: 700px;
  top: 28px;
  font-weight: bold;
  font-size: 0.875em;
}

label.admin-netid-label {
  font-size: .875em;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

.field-label {
  margin-top: .75em;
  display:block;
  width: 100%;
  font-size: .875em;
  font-weight: bold;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

#notification {
  color: #000;
  border: 2px solid #94a74d;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 1.0em;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-weight: bold;
  background-image: url(/images/check.gif);
  background-repeat: no-repeat;
  background-position: .5em center;
  padding-top: 0.25em;
  padding-right: 0.25em;
  padding-bottom: 0.25em;
  padding-left: 1.75em;
}

#error {
  color: #D00;
  border: 2px solid #D00;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 1.0em;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
  font-weight: bold;
  padding-top: 0.25em;
  padding-right: 0.25em;
  padding-bottom: 0.25em;
  padding-left: 1.75em;
}

.fieldWithErrors label {
  color: #bb0000;
}

.errorExplanation {
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;  
  border: 2px solid #bb0000;
  padding: 0.25em 0.5em;
  margin-top: 0.5em;
}

.errorExplanation h2 {
  color: #bb0000;
}

.errorExplanation ul {
  list-style: disc inside;
}

div.reservationCard {
  background-color: #eeeeaa;
  color: #000000;
  padding: 1em;
  margin-bottom: 1em;
}

div.reservationCard h2 {
  font-family: Palatino, 'Palatino Linotype', Times, 'Times New Roman', 'URW Bookman L', serif;
  font-style: italic;
/*  text-align: center;
*/  margin-top: 0px;
  font-size: 200%;
  font-weight: bold;
}

div.reservationContainer {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

div.notice {
  font-style: italic;
  font-size: .813em;
}

div#group-by-dept {
  position: relative;
  top: -25px;
  margin-left: 13em;  
}

input.submit-button {
  height: 3em;
  color: white;
  font-weight: bold;
  margin-bottom: 1em;
  font-size: 1em;
  font-weight: bold;
  cursor: pointer;
}

.confirm {
  background-color: #836c31;
  border: 1px solid #6C5828;
  -moz-border-radius: 15px;
  border-radius: 15px;

}

.delete {
  background-color: #501214;
  -moz-border-radius: 15px;
  border-radius: 15px;
}

.tentative {
  background-color: #666600;
}

.calendar {
  background-color: #4b4b4b;
  -moz-border-radius: 15px;
  border-radius: 15px;
  }

.button-link {
  display: block;
  width: 8em;
  color: white;
  margin-bottom: .5em;
  /*background-color: #836c31;
  border: 1px solid #6C5828;*/
  /*-moz-border-radius: 15px;
  border-radius: 15px;*/

  
}

.button-link a {
  display: block;
  padding: .25em;
  text-decoration: none;
  text-align: center;
  color: white;
  font-size: .75em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

.delete-link a {
  display: block;
  padding: .25em;
  text-decoration: none;
  color: #501214;
  font-size: .75em;
  font-weight: normal;
  font-family: 'Helvetica Neue', Arial, Helvetica, 'Nimbus Sans L', serif;
}

div#container {
  min-width: 920px;
  background-color: #FFF;
  margin-top: 60px;
  margin-left: 20px;
  margin-right: 40px;
  margin-bottom: 20px;
  padding: 20px 0px;
  min-height: 700px;
}

div.left-column {
  float: left;
  margin-top: 20px;
  width: 200px;
  
}

div#right-column {
  background-color: #FFF;
  margin-top: 20px;
  margin-left: 240px;
  margin-right: 40px;
  margin-bottom: 20px;
  min-height: 600px;
}
/* ... */

